--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,5 +5,8 @@ $brand_yellow: #f6821f;
 $color_14161C: #14161c;
 $color_6E747C: #6e747c;
 $color_1B1E25: #1b1e25;
+$color_848a8f: #848a8f;
+$color_2b3139: #2b3139;
+$color_16c784: #16c784;
 
 // mixins
