add timer component

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,5 +8,6 @@ $color_1B1E25: #1b1e25;
 $color_848a8f: #848a8f;
 $color_2b3139: #2b3139;
 $color_16c784: #16c784;
+$color_ffffff: #ffffff;
 
 // mixins
