--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,9 @@
 // colors
+$black: #0b0e11;
 $white: #eaecef;
 $green: #16c784;
 $brand_yellow: #f6821f;
+$honeydew: honeydew;
 $color_14161C: #14161c;
 $color_6E747C: #6e747c;
 $color_1B1E25: #1b1e25;
