--- a/src/assets/styles/Faq/Faq.scss
+++ b/src/assets/styles/Faq/Faq.scss
@@ -1,11 +1,10 @@
 @import "../variables.scss";
 
 .tytle {
-  font-weight: 600;
   font-size: 24px;
   line-height: 40px;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 32px;
 
   color: #eaecef;
 }
@@ -48,4 +47,8 @@
   margin-top: 16px;
 
   color: #848a8f;
+}
+
+.textWrite {
+  color: #fff;
 }
