--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $white: #eaecef;
 $green: #16c784;
 $brand_yellow: #f6821f;
 $honeydew: honeydew;
+$color_848a8f: #848a8f;
 $color_14161C: #14161c;
 $color_6E747C: #6e747c;
 $color_1B1E25: #1b1e25;
