--- a/src/assets/styles/components/footer/footer.module.scss
+++ b/src/assets/styles/components/footer/footer.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: transparent;
 
   &_title {
     font-weight: 400;
