--- a/src/assets/styles/components/header/header.module.scss
+++ b/src/assets/styles/components/header/header.module.scss
@@ -1,4 +1,4 @@
-@import "../../variables.scss";
+@use "../../variables.scss";
 
 .header {
   position: sticky;
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   padding: 0 32px;
+  background-color: variables.$black;
   z-index: 50;
 
   .header_body {
@@ -19,7 +20,16 @@
       align-items: center;
       justify-content: center;
     }
-
+    .token {
+      display: flex;
+      align-items: center;
+      .token_price {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        color: variables.$color_EAECEF;
+      }
+    }
     .mobile_block {
       display: flex;
       align-items: center;
@@ -47,7 +57,7 @@
 
   .header_burger span {
     position: absolute;
-    background-color: $brand_yellow;
+    background-color: variables.$brand_yellow;
     left: 0;
     width: 100%;
     height: 2px;
@@ -58,7 +68,7 @@
   .header_burger::before,
   .header_burger::after {
     content: "";
-    background-color: $brand_yellow;
+    background-color: variables.$brand_yellow;
     position: absolute;
     width: 100%;
     height: 2px;
@@ -81,7 +91,7 @@
 
   .header_burger span {
     position: absolute;
-    background-color: $brand_yellow;
+    background-color: variables.$brand_yellow;
     left: 0;
     width: 100%;
     height: 2px;
@@ -92,7 +102,7 @@
   .header_burger::before,
   .header_burger::after {
     content: "";
-    background-color: $brand_yellow;
+    background-color: variables.$brand_yellow;
     position: absolute;
     width: 100%;
     height: 2px;
