--- a/src/assets/styles/components/layout/layout.module.scss
+++ b/src/assets/styles/components/layout/layout.module.scss
@@ -1,7 +1,8 @@
 @use "../../variables.scss";
 
 .wrapper {
-  height: 100vh;
+  position: relative;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
