--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -13,6 +13,7 @@ $color_1d1d1d: #1d1d1d;
 $color_080808: #080808;
 $color_FFFFFF: #ffffff;
 $color_848A8F: #848a8f;
+$color_2b3139: #2b3139;
 $color_1E1E1F: #1e1e1f;
 $color_5A2D1A: #5a2d1a;
 $color_EAECEF: #eaecef;
