add connectWallet and update Faq components

--- a/src/assets/styles/components/layout/layout.module.scss
+++ b/src/assets/styles/components/layout/layout.module.scss
@@ -1,10 +1,14 @@
 @use "../../variables.scss";
 
-.wrapper {
-  position: relative;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.background {
   background-color: variables.$black;
+  .content {
+    position: relative;
+    height: 100%;
+    max-width: 749px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
