--- a/src/assets/styles/ClaimTokensBlock/Connected.scss
+++ b/src/assets/styles/ClaimTokensBlock/Connected.scss
@@ -2,13 +2,9 @@
 
 .tokensBlock {
   margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
   padding: 24px;
-
-  width: auto;
-  height: auto;
-
+  width: 100%;
+  height: 100%;
   background: $color_14161C;
   box-shadow: inset 0px 2px 2px $color_1B1E25;
   border-radius: 24px;
@@ -19,7 +15,6 @@
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 16px;
-
   color: $white;
 }
 
