--- a/src/assets/styles/ClaimTokensBlock/NoConnected.scss
+++ b/src/assets/styles/ClaimTokensBlock/NoConnected.scss
@@ -2,15 +2,9 @@
 
 .tokensBlock {
   margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
   padding: 24px;
-
-  width: auto;
-  height: auto;
-  left: 466px;
-  top: 308px;
-
+  width: 100%;
+  height: 100%;
   background: $color_14161C;
   box-shadow: inset 0px 2px 2px $color_1B1E25;
   border-radius: 24px;
