--- a/src/assets/styles/components/LeaveTelegram/LeaveTelegram.scss
+++ b/src/assets/styles/components/LeaveTelegram/LeaveTelegram.scss
@@ -1,15 +1,12 @@
-@import "../variables.scss";
+@use "../../variables.scss";
 
-.faqBlock {
+.send_mail {
+  width: 100%;
+  height: 100%;
   margin-top: 32px;
-  margin-left: auto;
-  margin-right: auto;
   padding: 24px;
   justify-content: center;
   text-align: center;
-
-  width: auto;
-  height: auto;
 
   background: rgba(246, 130, 31, 0.16);
   box-shadow: inset 0px 2px 2px rgba(255, 255, 255, 0.08);
@@ -21,9 +18,9 @@
   font-size: 14px;
   line-height: 24px;
 
-  color: #eaecef;
+  color: variables.$white;
 }
 
 .textWrite {
-  color: $brand_yellow;
+  color: variables.$brand_yellow;
 }
