--- a/src/assets/styles/TimerRoundStart/TimerRoundStart.scss
+++ b/src/assets/styles/TimerRoundStart/TimerRoundStart.scss
@@ -5,6 +5,7 @@
   align-items: center;
   width: 285px;
   height: 48px;
+  margin-top: 16px;
   margin-left: auto;
   margin-right: auto;
   padding: 4px;
