--- a/src/assets/styles/components/connectWallet/connectWallet.module.scss
+++ b/src/assets/styles/components/connectWallet/connectWallet.module.scss
@@ -3,6 +3,7 @@
 .button_connect {
   width: max-content;
   margin: 0 auto;
+  margin-top: 36px;
   padding: 8px 16px;
   border-radius: 24px;
   border: none;
