--- a/src/assets/styles/components/footer/footer.module.scss
+++ b/src/assets/styles/components/footer/footer.module.scss
@@ -3,10 +3,11 @@
 .footer {
   width: 100%;
   height: 76px;
-  display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   background-color: transparent;
+  margin-top: 48px;
 
   &_title {
     font-weight: 400;
@@ -14,4 +15,13 @@
     line-height: 24px;
     color: variables.$color_848A8F;
   }
+}
+
+.line {
+  height: 0px;
+  left: 0px;
+  top: 1748px;
+  margin-bottom: 24px;
+
+  border: 1px solid #2b3139;
 }
