add change active class to menu

--- a/src/assets/styles/components/connectWallet/connectWallet.module.scss
+++ b/src/assets/styles/components/connectWallet/connectWallet.module.scss
@@ -18,7 +18,9 @@
   &:hover {
     background-color: variables.$color_5A2D1A;
   }
-
+  .wallet_icon {
+    margin-right: 10px;
+  }
   @media only screen and (max-width: 436px) {
   }
 }
