--- a/src/assets/styles/components/layout/layout.module.scss
+++ b/src/assets/styles/components/layout/layout.module.scss
@@ -5,7 +5,7 @@
   .content {
     position: relative;
     height: 100%;
-    max-width: 749px;
+    max-width: 50%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
