--- a/src/assets/styles/components/logo/logo.module.scss
+++ b/src/assets/styles/components/logo/logo.module.scss
@@ -1,15 +1,11 @@
 .header_logo {
   position: relative;
-  top: 4px;
+  top: 0;
   z-index: 3;
   @media only screen and (max-width: 1000px) {
     margin-right: 20px;
   }
   @media only screen and (max-width: 500px) {
     margin-right: 0px;
-  }
-  @media only screen and (max-width: 420px) {
-    position: relative;
-    left: -12px;
   }
 }
