--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,8 +1,11 @@
 @import "reset.module.scss";
+@import "./fonts/_fonts.scss";
 
 body {
   font-style: normal;
   font-weight: normal;
   line-height: normal;
   z-index: 1;
+
+  font-family: "ProximaNova-Regular";
 }
