--- a/src/assets/styles/components/connectWallet/connectWallet.module.scss
+++ b/src/assets/styles/components/connectWallet/connectWallet.module.scss
@@ -1,8 +1,10 @@
 @use "../../variables.scss";
 
 .button_connect {
-  width: max-content;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
   margin-top: 36px;
   padding: 8px 16px;
   border-radius: 24px;
@@ -17,9 +19,6 @@
 
   &:hover {
     background-color: variables.$color_5A2D1A;
-  }
-  .wallet_icon {
-    margin-right: 10px;
   }
   @media only screen and (max-width: 436px) {
   }
