--- a/src/assets/styles/components/header/BurgerMenu.module.scss
+++ b/src/assets/styles/components/header/BurgerMenu.module.scss
@@ -1,4 +1,4 @@
-@import "../../variables.scss";
+@use "../../variables.scss";
 
 .header_menu {
   position: fixed;
@@ -7,8 +7,15 @@
   width: 100%;
   height: 100%;
   transition: all 0.3s ease 0s;
-  background-color: $black;
+  background-color: variables.$black;
   padding: 70px 0px 0px 0px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  button {
+    margin-bottom: 20px;
+  }
 }
 
 .arrows {
@@ -29,12 +36,12 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
-  color: $honeydew;
+  color: variables.$honeydew;
 }
 
 .header_link {
   list-style: none;
-  color: $color_848A8F;
+  color: variables.$color_848A8F;
   text-decoration: none;
   width: 62px;
   height: 24px;
@@ -47,7 +54,7 @@
   &:hover,
   &:focus,
   &:active {
-    color: $color_FFFFFF;
+    color: variables.$color_FFFFFF;
   }
 }
 
@@ -73,4 +80,18 @@
   margin: 0 auto;
   width: 168px;
   height: 100px;
+}
+
+// TODO: REFACTOR
+.signOut {
+  width: 100%;
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: variables.$white;
+  border: 1px solid variables.$color_2b3139;
+  &:hover {
+    color: variables.$brand_yellow;
+  }
 }
