fix path to component, add favicon, add connect to lockup contract, change config

--- a/src/assets/styles/components/header/header.module.scss
+++ b/src/assets/styles/components/header/header.module.scss
@@ -87,6 +87,10 @@
     min-width: auto;
   }
 
+  .header .header_body .account_hover_block {
+    display: none;
+  }
+
   .header_burger {
     display: block;
     position: relative;
